@@ -191,7 +191,9 @@ sub create_shared_lib {
   
   my $cfunc_names = [];
   for my $sub_name (@$sub_names) {
-    my $cfunc_name = "${package_name}::$sub_name";
+    my $category = $self->category;
+    my $category_uc = uc $category;
+    my $cfunc_name = "SPVM_${category_uc}_${package_name}::$sub_name";
     $cfunc_name =~ s/:/_/g;
     push @$cfunc_names, $cfunc_name;
   }
