@@ -482,7 +482,7 @@ void SPVM_CSOURCE_BUILDER_build_package_csource(SPVM_COMPILER* compiler, SPVM_ST
     for (sub_index = 0; sub_index < op_subs->length; sub_index++) {
       SPVM_OP* op_sub = SPVM_LIST_fetch(op_subs, sub_index);
       SPVM_SUB* sub = op_sub->uv.sub;
-      if (sub->have_compile_desc) {
+      if (sub->have_precompile_desc) {
         SPVM_CSOURCE_BUILDER_build_sub_declaration(compiler, string_buffer, sub->id);
         SPVM_STRING_BUFFER_add(string_buffer, ";\n");
       }
@@ -497,7 +497,7 @@ void SPVM_CSOURCE_BUILDER_build_package_csource(SPVM_COMPILER* compiler, SPVM_ST
     for (sub_index = 0; sub_index < op_subs->length; sub_index++) {
       SPVM_OP* op_sub = SPVM_LIST_fetch(op_subs, sub_index);
       SPVM_SUB* sub = op_sub->uv.sub;
-      if (sub->have_compile_desc) {
+      if (sub->have_precompile_desc) {
         SPVM_CSOURCE_BUILDER_build_sub_implementation(compiler, string_buffer, sub->id);
       }
     }
@@ -565,7 +565,7 @@ void SPVM_CSOURCE_BUILDER_build_sub_declaration(SPVM_COMPILER* compiler, SPVM_ST
   SPVM_OP* op_sub = SPVM_LIST_fetch(compiler->op_subs, sub_id);
   SPVM_SUB* sub = op_sub->uv.sub;
 
-  assert(sub->have_compile_desc);
+  assert(sub->have_precompile_desc);
   
   // Subroutine name
   const char* sub_abs_name = sub->abs_name;
@@ -604,7 +604,7 @@ void SPVM_CSOURCE_BUILDER_build_sub_implementation(SPVM_COMPILER* compiler, SPVM
   int32_t sub_return_type_dimension = sub_return_type->dimension;
   int32_t sub_return_type_is_object = SPVM_TYPE_is_object(compiler, sub_return_type);
   
-  assert(sub->have_compile_desc);
+  assert(sub->have_precompile_desc);
   
   SPVM_CSOURCE_BUILDER_build_sub_declaration(compiler, string_buffer, sub_id);
   
@@ -2030,7 +2030,7 @@ void SPVM_CSOURCE_BUILDER_build_sub_implementation(SPVM_COMPILER* compiler, SPVM
         }
         
         // Subroutine inline expantion in same package
-        if (decl_sub->op_package->uv.package->id == sub->op_package->uv.package->id && decl_sub->have_compile_desc) {
+        if (decl_sub->op_package->uv.package->id == sub->op_package->uv.package->id && decl_sub->have_precompile_desc) {
           SPVM_STRING_BUFFER_add(string_buffer, "    exception_flag = SPVM_PRECOMPILE_");
           SPVM_STRING_BUFFER_add(string_buffer, (char*)decl_sub->abs_name);
           {
