@@ -1994,14 +1994,14 @@ SPVM_OP* SPVM_OP_build_sub(SPVM_COMPILER* compiler, SPVM_OP* op_sub, SPVM_OP* op
       sub->have_native_desc = 1;
     }
     else if (descriptor->id == SPVM_DESCRIPTOR_C_ID_PRECOMPILE) {
-      sub->have_compile_desc = 1;
+      sub->have_precompile_desc = 1;
     }
     else {
       SPVM_yyerror_format(compiler, "invalid subroutine descriptor %s", SPVM_DESCRIPTOR_C_ID_NAMES[descriptor->id], op_descriptors->file, op_descriptors->line);
     }
   }
 
-  if (sub->have_native_desc && sub->have_compile_desc) {
+  if (sub->have_native_desc && sub->have_precompile_desc) {
     SPVM_yyerror_format(compiler, "native and compile descriptor can't be used together", op_descriptors->file, op_descriptors->line);
   }
 
